--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -15,9 +15,9 @@
   <body>
     <header class = "header">
       <ul class="social__links">
-        <li><a href="https://www.instagram.com/rcpprogrammingclub/" target="_blank"><img alt= "logo" src="../../public/pictures/clubLogo.png" class = "logo"></a></li>
-        <li><a href="https://discord.gg/yfmjwJQBkP" target="_blank"><img alt= "discord" src="../../public/pictures/discord.png" class = "disc"></a></li>
-        <li><a href="https://www.instagram.com/hackforyouth/" target="_blank"><img alt= "instagram" src="../../public/pictures/insta.png" class = "insta"></a></li>
+        <li><a href="https://www.instagram.com/rcpprogrammingclub/" target="_blank"><img alt= "logo" src="/pictures/clubLogo.png" class = "logo"></a></li>
+        <li><a href="https://discord.gg/yfmjwJQBkP" target="_blank"><img alt= "discord" src="/pictures/discord.png" class = "disc"></a></li>
+        <li><a href="https://www.instagram.com/hackforyouth/" target="_blank"><img alt= "instagram" src="/pictures/insta.png" class = "insta"></a></li>
     </ul>
       <nav>
           <ul class="nav__links">
