--- a/src/components/info.astro
+++ b/src/components/info.astro
@@ -11,7 +11,7 @@
   </head>
   <body>
     <div class="innovation">
-      <img class="img-icon" alt="" src="../../public/pictures/innovationBG.jpg" />
+      <img class="img-icon" alt="" src="/pictures/innovationBG.jpg" />
 
       <div class="blue"></div>
       <div class="text-content-title">
