--- a/src/components/sponsors.astro
+++ b/src/components/sponsors.astro
@@ -15,14 +15,14 @@
         <p class="subtitle">Thank you to all our sponsors for making Hack4Youth possible!</p>
         <div class = "sponsors">
           <div class = "row">
-            <a href="https://hackclub.com/" target = "_blank"><img alt = "HackClub" class = "image" src="../../public/pictures/sponsors/HackClub.png"></a>
-            <a href="" target = ""><img alt = "???" class = "image" src="../../public/pictures/sponsors/question.png"></a>
-            <a href="" target = ""><img alt = "???" class = "image" src="../../public/pictures/sponsors/question.png"></a>
+            <a href="https://hackclub.com/" target = "_blank"><img alt = "HackClub" class = "image" src="/pictures/sponsors/HackClub.png"></a>
+            <a href="" target = ""><img alt = "???" class = "image" src="/pictures/sponsors/question.png"></a>
+            <a href="" target = ""><img alt = "???" class = "image" src="/pictures/sponsors/question.png"></a>
           </div>
           <div class = "row">
-            <a href="" target = ""><img alt = "???" class = "image" src="../../public/pictures/sponsors/question.png"></a>
-            <a href="" target = ""><img alt = "???" class = "image" src="../../public/pictures/sponsors/question.png"></a>
-            <a href="" target = ""><img alt = "???" class = "image" src="../../public/pictures/sponsors/question.png"></a>
+            <a href="" target = ""><img alt = "???" class = "image" src="/pictures/sponsors/question.png"></a>
+            <a href="" target = ""><img alt = "???" class = "image" src="/pictures/sponsors/question.png"></a>
+            <a href="" target = ""><img alt = "???" class = "image" src="/pictures/sponsors/question.png"></a>
           </div>
         </div>
       </div>
