--- a/src/components/title.astro
+++ b/src/components/title.astro
@@ -12,7 +12,7 @@
   </head>
   <body>
     <div class="hero-actions">
-      <!-- <img class="img-icon" alt="" src="../../public/pictures/venue.jpg" /> -->
+      <!-- <img class="img-icon" alt="" src="./pictures/venue.jpg" /> -->
       <div class="blue"/>
       <section class="text-content-title">
         <h1 class="title">Hack4Youth</h1>
