--- a/src/components/questions.astro
+++ b/src/components/questions.astro
@@ -184,9 +184,8 @@
 }
 
 .questions{
-
   flex-direction: column;
-  display: flex;
+  display: inline-block;
   justify-content: space-between;
   text-align: left;
   font-family: inherit;
@@ -194,11 +193,7 @@
   margin-right: auto;
 }
 .row{
-  display:flex;
-  margin-left: auto;
-  margin-right: auto;
-  flex-direction: row;
-  font-family: inherit;
+  display: flex;
 }
 .box{
   width: 525px;
@@ -222,5 +217,147 @@
   font-size: 22px;
   font-family: var(--single-line-body-base);
   color:#001f3a;
+}
+
+@media(max-width:1200px){
+  .box{
+    width: 450px;
+    height: 200px;
+  }
+  .question{
+    font-size: 30px;
+  }
+  .answer{
+    font-size: 18px;
+  }
+  .hero-actions{
+    height:1150px
+  }
+}
+
+@media(max-width:1100px){
+  .title{
+    font-size: 45px;
+  }
+  .subtitle{
+    font-size: 21px;
+  }
+  .box{
+    width: 320px;
+    height: 180px;
+  }
+  .question{
+    font-size: 25px;
+  }
+  .answer{
+    font-size: 13px;
+  }
+  .hero-actions{
+    height:1050px
+  }
+}
+
+
+@media(max-width:800px){
+  .title{
+    font-size: 40px;
+  }
+  .subtitle{
+    font-size: 17px;
+  }
+  .box{
+    width: 240px;
+    height: 135px;
+  }
+  .question{
+    font-size: 20px;
+  }
+  .answer{
+    font-size: 12px;
+  }
+  .hero-actions{
+    height:800px
+  }
+  .discord{
+    padding-left: 6px;
+    padding-right: 6px;
+  }
+}
+
+@media(max-width:602px){
+  .title{
+    font-size: 35px;
+  }
+  .subtitle{
+    font-size: 14px;
+  }
+  .box{
+    width: 190px;
+    height: 110px;
+  }
+  .question{
+    font-size: 16px;
+  }
+  .answer{
+    font-size: 10px;
+  }
+  .hero-actions{
+    height:690px
+  }
+  .discord{
+    padding-left: 5px;
+    padding-right: px;
+  }
+}
+
+@media(max-width:602px){
+  .title{
+    font-size: 31px;
+  }
+  .subtitle{
+    font-size: 13px;
+  }
+  .box{
+    width: 170px;
+    height: 95px;
+  }
+  .question{
+    font-size: 14px;
+  }
+  .answer{
+    font-size: 8.75px;
+  }
+  .hero-actions{
+    height:610px
+  }
+  .discord{
+    padding-left: 4px;
+    padding-right: 4px;
+  }
+}
+@media(max-width:430px){
+  .title{
+    font-size: 26px;
+  }
+  .subtitle{
+    font-size: 11px;
+  }
+  .box{
+    width: 140px;
+    height: 85px;
+  }
+  .question{
+    font-size: 12px;
+  }
+  .answer{
+    font-size: 8.5px;
+  }
+  .hero-actions{
+    height:550px
+  }
+  .discord{
+    padding-left: 4px;
+    padding-right: 4px;
+  }
 }
 </style>
