--- a/src/components/sponsors.astro
+++ b/src/components/sponsors.astro
@@ -5,7 +5,6 @@
     <meta name="viewport" content="initial-scale=1, width=device-width" />
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap"
     />
   </head>
   <body>
@@ -83,7 +82,6 @@
   color: #a5d7ff;
   font-family: var(--single-line-body-base);
   margin:0;
-  padding-top: -100px;
 }
 
 .subtitle{
@@ -116,4 +114,111 @@
   cursor: pointer;
 }
 
+@media(max-width:1255px){
+  .image{
+    width: 16rem;
+    height: 16rem;
+    padding: 2.1rem;
+  }
+  .hero-actions{
+    height: 1000px
+  }
+}
+
+@media(max-width:1070px){
+  .image{
+    width: 12rem;
+    height: 12rem;
+    padding: 1.6rem;
+  }
+  .hero-actions{
+    height: 875px
+  }
+}
+
+@media(max-width:885px){
+  .image{
+    width: 10rem;
+    height: 10rem;
+    padding: 1rem;
+  }
+  .title{
+    font-size: 90px;
+  }
+  .subtitle{
+    font-size: 25px;
+  }
+  .hero-actions{
+    height: 750px
+  }
+}
+@media(max-width:710px){
+  .image{
+    width: 9rem;
+    height: 9rem;
+    padding: 0.9rem;
+  }
+  .title{
+    font-size: 60px;
+    margin-top: -1.5rem;
+  }
+  .subtitle{
+    font-size: 21px;
+  }
+  .hero-actions{
+    height: 660px
+  }
+}
+@media(max-width:710px){
+  .image{
+    width: 7.5rem;
+    height: 7.5rem;
+    padding: 0.7rem;
+  }
+  .title{
+    font-size: 55px;
+    margin-top: -1.7rem;
+  }
+  .subtitle{
+    font-size: 17px;
+  }
+  .hero-actions{
+    height: 530px
+  }
+}
+@media(max-width:500px){
+  .image{
+    width: 6.25rem;
+    height: 6.25rem;
+    padding: 0.5rem;
+  }
+  .title{
+    font-size: 50px;
+    margin-top: -2.2rem;
+  }
+  .subtitle{
+    font-size: 14px;
+  }
+  .hero-actions{
+    height: 450px
+  }
+}
+@media(max-width:412px){
+  .image{
+    width: 5.7rem;
+    height: 5.7rem;
+    padding: 0.3rem;
+  }
+  .title{
+    font-size: 44px;
+    margin-top: -2.5rem;
+  }
+  .subtitle{
+    margin-top: -1rem;
+    font-size: 11.5px;
+  }
+  .hero-actions{
+    height: 380px
+  }
+}
 </style>
