--- a/src/components/title.astro
+++ b/src/components/title.astro
@@ -16,7 +16,7 @@
       <div class="blue"/>
       <section class="text-content-title">
         <h1 class="title">Hack4Youth</h1>
-        <h1 class="subtitle">A hackathon organized by students for students</h1>
+        <h1 class="subtitle">November 23</h1>
       </section>
       <button class="button">
         <a href="https://jv3wjg8e4fu.typeform.com/to/BdhCnZ9Y" target = "_blank">
