--- a/src/components/questions.astro
+++ b/src/components/questions.astro
@@ -204,6 +204,7 @@
   align-items: start;
   font-family: inherit;
   background-color: #8cc7fb;
+  margin:0.5rem
 }
 
 .question{
@@ -231,13 +232,14 @@
     font-size: 18px;
   }
   .hero-actions{
-    height:1150px
+    height:1200px
   }
 }
 
 @media(max-width:1100px){
   .title{
     font-size: 45px;
+    margin-top: -2rem;
   }
   .subtitle{
     font-size: 21px;
@@ -253,7 +255,7 @@
     font-size: 13px;
   }
   .hero-actions{
-    height:1050px
+    height:1020px
   }
 }
 
@@ -261,6 +263,7 @@
 @media(max-width:800px){
   .title{
     font-size: 40px;
+    margin-top: -2.5rem;
   }
   .subtitle{
     font-size: 17px;
@@ -276,7 +279,7 @@
     font-size: 12px;
   }
   .hero-actions{
-    height:800px
+    height:820px
   }
   .discord{
     padding-left: 6px;
@@ -284,35 +287,12 @@
   }
 }
 
-@media(max-width:602px){
-  .title{
-    font-size: 35px;
-  }
-  .subtitle{
-    font-size: 14px;
-  }
-  .box{
-    width: 190px;
-    height: 110px;
-  }
-  .question{
-    font-size: 16px;
-  }
-  .answer{
-    font-size: 10px;
-  }
-  .hero-actions{
-    height:690px
-  }
-  .discord{
-    padding-left: 5px;
-    padding-right: px;
-  }
-}
+
 
 @media(max-width:602px){
   .title{
     font-size: 31px;
+    margin-top: -2.75rem;
   }
   .subtitle{
     font-size: 13px;
@@ -328,32 +308,33 @@
     font-size: 8.75px;
   }
   .hero-actions{
-    height:610px
+    height:620px
   }
   .discord{
     padding-left: 4px;
     padding-right: 4px;
   }
 }
-@media(max-width:430px){
+@media(max-width:450px){
   .title{
     font-size: 26px;
+    margin-top: -2.5rem;
   }
   .subtitle{
     font-size: 11px;
   }
   .box{
-    width: 140px;
+    width: 120px;
     height: 90px;
   }
   .question{
-    font-size: 12px;
+    font-size: 11px;
   }
   .answer{
-    font-size: 8.25px;
+    font-size: 7.25px;
   }
   .hero-actions{
-    height:570px
+    height:605px
   }
   .discord{
     padding-left: 4px;
