--- a/src/components/title.astro
+++ b/src/components/title.astro
@@ -12,11 +12,11 @@
   </head>
   <body>
     <div class="hero-actions">
-      <img class="img-icon" alt="" src="./pictures/bg.jpg" />
+      <img class="img-icon" alt="" src="./pictures/venue.jpg" />
       <div class="blue"/>
       <section class="text-content-title">
         <h1 class="title">Hack4Youth</h1>
-        <h1 class="subtitle">November 23</h1>
+        <h1 class="subtitle">November 24</h1>
       </section>
       <button class="button">
         <a href="https://jv3wjg8e4fu.typeform.com/to/BdhCnZ9Y" target = "_blank">
