change color scheme

--- a/src/components/sponsors.astro
+++ b/src/components/sponsors.astro
@@ -95,7 +95,7 @@
   width: 100%;
   position: relative;
   height: 1100px;
-  background-color: #001f3a;
+  background-color: #044d8d;
   max-width: 100%;
   display: flex;
   flex-direction: column;
