changed CodeNinjas link

--- a/src/components/sponsors.astro
+++ b/src/components/sponsors.astro
@@ -15,7 +15,7 @@
         <div class = "sponsors">
           <div class = "row">
             <a href="https://hackclub.com/" target = "_blank"><img alt = "HackClub" class = "image" src="/pictures/sponsors/HackClub.png"></a>
-            <a href="https://www.codeninjas.com/tx-richmond" target = "_blank"><img alt = "???" class = "image" src="/pictures/sponsors/CodeNinjas.png"></a>
+            <a href="https://www.codeninjas.com/richmond-bc-ca" target = "_blank"><img alt = "???" class = "image" src="/pictures/sponsors/CodeNinjas.png"></a>
             <a href="" target = ""><img alt = "???" class = "image" src="/pictures/sponsors/question.png"></a>
           </div>
           <div class = "row">
