--- a/src/components/title.astro
+++ b/src/components/title.astro
@@ -19,7 +19,7 @@
         <h1 class="subtitle">November 24</h1>
       </section>
       <button class="button">
-        <a href="https://jv3wjg8e4fu.typeform.com/to/BdhCnZ9Y" target = "_blank">
+        <a href="https://45hymisfpe5.typeform.com/to/sR0GrIK8" target = "_blank">
         <div class="sign-up">Sign Up</div>
         </a>
       </button>
