--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -16,7 +16,7 @@
     <header class = "header">
       <ul class="social__links">
         <li><a href="https://www.instagram.com/rcpprogrammingclub/" target="_blank"><img alt= "logo" src="/pictures/clubLogo.png" class = "logo"></a></li>
-        <li><a href="https://discord.gg/hXBCUNB55e" target="_blank"><img alt= "discord" src="/pictures/discord.png" class = "disc"></a></li>
+        <li><a href="https://discord.gg/YyQYZ5rBM9" target="_blank"><img alt= "discord" src="/pictures/discord.png" class = "disc"></a></li>
         <li><a href="https://www.instagram.com/hackforyouth/" target="_blank"><img alt= "instagram" src="/pictures/insta.png" class = "insta"></a></li>
     </ul>
       <nav>
