--- a/src/components/sponsors.astro
+++ b/src/components/sponsors.astro
@@ -15,11 +15,11 @@
         <div class = "sponsors">
           <div class = "row">
             <a href="https://hackclub.com/" target = "_blank"><img alt = "HackClub" class = "image" src="/pictures/sponsors/HackClub.png"></a>
-            <a href="https://www.codeninjas.com/richmond-bc-ca" target = "_blank"><img alt = "???" class = "image" src="/pictures/sponsors/CodeNinjas.png"></a>
-            <a href="" target = ""><img alt = "???" class = "image" src="/pictures/sponsors/question.png"></a>
+            <a href="https://www.codeninjas.com/richmond-bc-ca" target = "_blank"><img alt = "CodeNinjas" class = "image" src="/pictures/sponsors/CodeNinjas.png"></a>
+            <a href="https://gen.xyz/" target = "_blank"><img alt = ".xyz" class = "image" src="/pictures/sponsors/xyz-logo-color.png"></a>
           </div>
           <div class = "row">
-            <a href="" target = ""><img alt = "???" class = "image" src="/pictures/sponsors/question.png"></a>
+            <a href="https://1password.com/" target = "_blank"><img alt = "???" class = "image" src="/pictures/sponsors/question.png"></a>
             <a href="" target = ""><img alt = "???" class = "image" src="/pictures/sponsors/question.png"></a>
             <a href="" target = ""><img alt = "???" class = "image" src="/pictures/sponsors/question.png"></a>
           </div>
