--- a/src/components/title.astro
+++ b/src/components/title.astro
@@ -16,7 +16,7 @@
       <div class="blue"/>
       <section class="text-content-title">
         <h1 class="title">Hack4Youth</h1>
-        <h1 class="subtitle">November 24</h1>
+        <h1 class="subtitle">November 24, 2024</h1>
       </section>
       <button class="button">
         <a href="https://forms.gle/XBzYmEokV9AWxGqp9" target = "_blank">
