--- a/src/components/questions.astro
+++ b/src/components/questions.astro
@@ -26,7 +26,7 @@
               Who can participate?
             </p>
             <p class = "answer">
-              Any students who are in grades 7-12 that live in British Columbia are allowed to participate! 
+              Any high school students that live in British Columbia are allowed to participate! 
             </p>
           </div>
           <div class = "box">
