--- a/src/components/info.astro
+++ b/src/components/info.astro
@@ -18,7 +18,7 @@
         <b class="title">Welcome to Hack4Youth!</b>
         <div class="subtitle">
           <p>
-            Hack For Youth is an exciting and accessible hackathon designed for 
+            Hack For Youth is an exciting and accessible hackathon designed by a group of high school students for 
             high school coders eager to unleash their creativity and enhance their 
             programming skills. Our mission is to inspire the next generation of innovators 
             and entrepreneurs by introducing them to programming in a collaborative environment.
